[gd_scene load_steps=3 format=3 uid="uid://b4wumttxvajdb"]

[ext_resource type="Script" path="res://scenes/Decorations_Set.gd" id="1_wba2c"]
[ext_resource type="Texture2D" uid="uid://cwndxsnl5ikhc" path="res://assets/textures/pxArt (3).png" id="2_j1g8t"]

[node name="DecorationsSet" type="Sprite2D"]
script = ExtResource("1_wba2c")
decorations = 7

[node name="Fontaine" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(350, 260, 110, 100)

[node name="Roche_1" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(126.247, 481.909, 34.1678, 29.3799)

[node name="Roche_2" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(67.6267, 484.873, 26.7182, 26.7181)

[node name="Pot" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(155.422, 140.496, 42.1488, 57.0248)

[node name="Statue" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(439.47, 16.3303, 53.7191, 80.9918)

[node name="Panneau_1" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(89.0912, 148.364, 46.3637, 54.5455)

[node name="Panneau_2" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(90.9819, 220.308, 40.3599, 42.8436)

[node name="Cercle" type="Sprite2D" parent="."]
texture = ExtResource("2_j1g8t")
region_enabled = true
region_rect = Rect2(416.601, 348.3, 70.4, 72.6001)
